<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.brightfuture.application.activity.RegisterOptionalActivity">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:id="@+id/titleText"
        android:textColor="#F44336" />

    <TextView android:text="@string/form_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@id/titleText"
        android:id="@+id/welcomeText"
        android:textColor="#F44336" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/first_name_hint"
        android:id="@+id/firstNameText"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/last_name_hint"
        android:id="@+id/lastNameText"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firstNameText"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/address_line1_hint"
        android:id="@+id/addressLine1"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lastNameText"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/address_line2_hint"
        android:id="@+id/addressLine2"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addressLine1"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/postcode_hint"
        android:id="@+id/postcode"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addressLine2"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:text="@string/register_button"
        android:textColor="#F44336"
        android:textSize="14sp"
        android:id="@+id/registerButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/postcode"
        android:layout_alignLeft="@+id/postcode"
        android:layout_alignStart="@+id/postcode"
        android:onClick="createNewUserProfile"
        android:background="@drawable/custom_button_style"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:text="@string/skip_button"
        android:textColor="#F44336"
        android:textSize="14sp"
        android:id="@+id/skipButton"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/registerButton"
        android:layout_toEndOf="@+id/registerButton"
        android:layout_below="@+id/postcode"
        android:layout_alignRight="@+id/postcode"
        android:layout_alignEnd="@+id/postcode"
        android:onClick="createEmptyUserProfile"
        android:background="@drawable/custom_button_style"/>

</RelativeLayout>
