<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.brightfuture.application.activity.ProfileActivity">

    <TextView
        android:text="@string/profile_default_message"
        android:layout_width="wrap_content"
        android:id="@+id/profileText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:layout_marginBottom="30sp"
        android:textColor="#F44336" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/first_name_hint"
        android:id="@+id/firstNameText"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/profileText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/last_name_hint"
        android:id="@+id/lastNameText"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firstNameText"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/address_line1_hint"
        android:id="@+id/addressLine1"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lastNameText"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/address_line2_hint"
        android:id="@+id/addressLine2"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addressLine1"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="text"
        android:ems="12"
        android:hint="@string/postcode_hint"
        android:id="@+id/postcode"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addressLine2"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/postcode"
        android:text="@string/save_button"
        android:textColor="#F44336"
        android:textSize="14sp"
        android:id="@+id/saveButton"
        android:layout_marginTop="45dp"
        android:onClick="updateProfile"
        android:background="@drawable/custom_button_style"/>

</RelativeLayout>
