<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.brightfuture.application.activity.RegisterRequiredActivity">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:id="@+id/titleText"
        android:textColor="#F44336" />

    <TextView android:text="@string/form_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@id/titleText"
        android:id="@+id/welcomeText"
        android:textColor="#F44336" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="textEmailAddress"
        android:ems="12"
        android:hint="@string/reg_email_hint"
        android:id="@+id/emailText"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:ems="12"
        android:hint="@string/reg_password_hint"
        android:id="@+id/passwordText"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/emailText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:ems="12"
        android:hint="@string/reg_password_confirm_hint"
        android:id="@+id/passwordConfirmText"
        android:ellipsize="start"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/next_button"
        android:textColor="#F44336"
        android:textSize="14sp"
        android:id="@+id/button"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordConfirmText"
        android:onClick="createAccountAndNext"
        android:background="@drawable/custom_button_style"/>
</RelativeLayout>
