<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:id="@+id/titleText"
        android:layout_gravity="center"
        android:textColor="#F44336"/>

    <TextView android:text="@string/welcome_message"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@id/titleText"
        android:id="@+id/welcomeText"
        android:textColor="#F44336"/>

    <EditText
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="12"
        android:hint="@string/email_hint"
        android:textColorHint="#BDBDBD"
        android:id="@+id/emailText"
        android:ellipsize="start"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:textSize="25dp"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="12"
        android:hint="@string/password_hint"
        android:textColorHint="#BDBDBD"
        android:id="@+id/passwordText"
        android:ellipsize="start"
        android:layout_below="@+id/emailText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:textSize="25dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/login_button"
        android:textColor="#F44336"
        android:textSize="14sp"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordText"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:onClick="logInUser"
        android:background="@drawable/custom_button_style"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="#F44336"
        android:id="@+id/textView"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="10dp"
        android:linksClickable="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="goToRegister"
        android:layout_gravity="center"/>

</LinearLayout>
